materijali sa osnovnih studija/3. godina/Prevodjenje programskih jezika/vezbe/vulovic/12/vezbanje/2019/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba ';'
    2        | naredba ';'

    3 naredba: INT ID '=' izraz
    4        | INT ID
    5        | ID '=' izraz
    6        | PRINT '(' izraz ',' izraz ')'
    7        | PRINT '(' izraz ')'
    8        | izraz EQU izraz
    9        | LIST LISTID
   10        | LIST LISTID '=' izraz

   11 izraz: BROJ
   12      | ID
   13      | '(' izraz ')'
   14      | izraz '+' izraz
   15      | izraz '-' izraz
   16      | izraz '*' izraz
   17      | izraz '/' izraz
   18      | izraz '&' izraz
   19      | izraz '|' izraz
   20      | izraz '^' izraz
   21      | izraz SHR izraz
   22      | izraz SHL izraz
   23      | '~' izraz
   24      | '-' izraz


Terminals, with rules where they appear

$end (0) 0
'&' (38) 18
'(' (40) 6 7 13
')' (41) 6 7 13
'*' (42) 16
'+' (43) 14
',' (44) 6
'-' (45) 15 24
'/' (47) 17
';' (59) 1 2
'=' (61) 3 5 10
'^' (94) 20
'|' (124) 19
'~' (126) 23
error (256)
PRINT (258) 6 7
EQU (259) 8
SHR (260) 21
SHL (261) 22
INT (262) 3 4
LIST (263) 9 10
BROJ (264) 11
ID (265) 3 4 5 12
LISTID (266) 9 10
UMINUS (267)


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
program (27)
    on left: 1 2, on right: 0 1
naredba (28)
    on left: 3 4 5 6 7 8 9 10, on right: 1 2
izraz (29)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24, on right: 3
    5 6 7 8 10 13 14 15 16 17 18 19 20 21 22 23 24


State 0

    0 $accept: . program $end

    PRINT  shift, and go to state 1
    INT    shift, and go to state 2
    LIST   shift, and go to state 3
    BROJ   shift, and go to state 4
    ID     shift, and go to state 5
    '-'    shift, and go to state 6
    '~'    shift, and go to state 7
    '('    shift, and go to state 8

    program  go to state 9
    naredba  go to state 10
    izraz    go to state 11


State 1

    6 naredba: PRINT . '(' izraz ',' izraz ')'
    7        | PRINT . '(' izraz ')'

    '('  shift, and go to state 12


State 2

    3 naredba: INT . ID '=' izraz
    4        | INT . ID

    ID  shift, and go to state 13


State 3

    9 naredba: LIST . LISTID
   10        | LIST . LISTID '=' izraz

    LISTID  shift, and go to state 14


State 4

   11 izraz: BROJ .

    $default  reduce using rule 11 (izraz)


State 5

    5 naredba: ID . '=' izraz
   12 izraz: ID .

    '='  shift, and go to state 15

    $default  reduce using rule 12 (izraz)


State 6

   24 izraz: '-' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 17


State 7

   23 izraz: '~' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 18


State 8

   13 izraz: '(' . izraz ')'

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 19


State 9

    0 $accept: program . $end
    1 program: program . naredba ';'

    $end   shift, and go to state 20
    PRINT  shift, and go to state 1
    INT    shift, and go to state 2
    LIST   shift, and go to state 3
    BROJ   shift, and go to state 4
    ID     shift, and go to state 5
    '-'    shift, and go to state 6
    '~'    shift, and go to state 7
    '('    shift, and go to state 8

    naredba  go to state 21
    izraz    go to state 11


State 10

    2 program: naredba . ';'

    ';'  shift, and go to state 22


State 11

    8 naredba: izraz . EQU izraz
   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    EQU  shift, and go to state 23
    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32


State 12

    6 naredba: PRINT '(' . izraz ',' izraz ')'
    7        | PRINT '(' . izraz ')'

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 33


State 13

    3 naredba: INT ID . '=' izraz
    4        | INT ID .

    '='  shift, and go to state 34

    $default  reduce using rule 4 (naredba)


State 14

    9 naredba: LIST LISTID .
   10        | LIST LISTID . '=' izraz

    '='  shift, and go to state 35

    $default  reduce using rule 9 (naredba)


State 15

    5 naredba: ID '=' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 36


State 16

   12 izraz: ID .

    $default  reduce using rule 12 (izraz)


State 17

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz
   24      | '-' izraz .

    $default  reduce using rule 24 (izraz)


State 18

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz
   23      | '~' izraz .

    $default  reduce using rule 23 (izraz)


State 19

   13 izraz: '(' izraz . ')'
   14      | izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32
    ')'  shift, and go to state 37


State 20

    0 $accept: program $end .

    $default  accept


State 21

    1 program: program naredba . ';'

    ';'  shift, and go to state 38


State 22

    2 program: naredba ';' .

    $default  reduce using rule 2 (program)


State 23

    8 naredba: izraz EQU . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 39


State 24

   21 izraz: izraz SHR . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 40


State 25

   22 izraz: izraz SHL . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 41


State 26

   14 izraz: izraz '+' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 42


State 27

   15 izraz: izraz '-' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 43


State 28

   17 izraz: izraz '/' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 44


State 29

   16 izraz: izraz '*' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 45


State 30

   18 izraz: izraz '&' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 46


State 31

   19 izraz: izraz '|' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 47


State 32

   20 izraz: izraz '^' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 48


State 33

    6 naredba: PRINT '(' izraz . ',' izraz ')'
    7        | PRINT '(' izraz . ')'
   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32
    ','  shift, and go to state 49
    ')'  shift, and go to state 50


State 34

    3 naredba: INT ID '=' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 51


State 35

   10 naredba: LIST LISTID '=' . izraz

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 52


State 36

    5 naredba: ID '=' izraz .
   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32

    $default  reduce using rule 5 (naredba)


State 37

   13 izraz: '(' izraz ')' .

    $default  reduce using rule 13 (izraz)


State 38

    1 program: program naredba ';' .

    $default  reduce using rule 1 (program)


State 39

    8 naredba: izraz EQU izraz .
   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32

    $default  reduce using rule 8 (naredba)


State 40

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   21      | izraz SHR izraz .
   22      | izraz . SHL izraz

    $default  reduce using rule 21 (izraz)


State 41

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz
   22      | izraz SHL izraz .

    $default  reduce using rule 22 (izraz)


State 42

   14 izraz: izraz . '+' izraz
   14      | izraz '+' izraz .
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    $default  reduce using rule 14 (izraz)


State 43

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   15      | izraz '-' izraz .
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    $default  reduce using rule 15 (izraz)


State 44

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   17      | izraz '/' izraz .
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    $default  reduce using rule 17 (izraz)


State 45

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   16      | izraz '*' izraz .
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    $default  reduce using rule 16 (izraz)


State 46

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   18      | izraz '&' izraz .
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    $default  reduce using rule 18 (izraz)


State 47

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   19      | izraz '|' izraz .
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    $default  reduce using rule 19 (izraz)


State 48

   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   20      | izraz '^' izraz .
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    $default  reduce using rule 20 (izraz)


State 49

    6 naredba: PRINT '(' izraz ',' . izraz ')'

    BROJ  shift, and go to state 4
    ID    shift, and go to state 16
    '-'   shift, and go to state 6
    '~'   shift, and go to state 7
    '('   shift, and go to state 8

    izraz  go to state 53


State 50

    7 naredba: PRINT '(' izraz ')' .

    $default  reduce using rule 7 (naredba)


State 51

    3 naredba: INT ID '=' izraz .
   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32

    $default  reduce using rule 3 (naredba)


State 52

   10 naredba: LIST LISTID '=' izraz .
   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32

    $default  reduce using rule 10 (naredba)


State 53

    6 naredba: PRINT '(' izraz ',' izraz . ')'
   14 izraz: izraz . '+' izraz
   15      | izraz . '-' izraz
   16      | izraz . '*' izraz
   17      | izraz . '/' izraz
   18      | izraz . '&' izraz
   19      | izraz . '|' izraz
   20      | izraz . '^' izraz
   21      | izraz . SHR izraz
   22      | izraz . SHL izraz

    SHR  shift, and go to state 24
    SHL  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '/'  shift, and go to state 28
    '*'  shift, and go to state 29
    '&'  shift, and go to state 30
    '|'  shift, and go to state 31
    '^'  shift, and go to state 32
    ')'  shift, and go to state 54


State 54

    6 naredba: PRINT '(' izraz ',' izraz ')' .

    $default  reduce using rule 6 (naredba)
